--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h3>Wat eten we anavond</h3>
+    <p>Ik eet wat pasta met rijst</p>
 </body>
 </html>
